...
                                <rect key="frame" x="147" y="388" width="120" height="120"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="120" id="N5p-Uc-xmt"/>
                                    <constraint firstAttribute="width" constant="120" id="ZB8-Mg-SEG"/>
                                </constraints>
                                <color key="tintColor" red="0.10196078431372549" green="0.59607843137254901" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" image="Mic"/>
                                <connections>
                                    <action selector="recordingToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nau-9g-cEC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GHy-h1-747">
                                <rect key="frame" x="97" y="608" width="220" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="Rt2-Ls-Jzr"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFUIText-Semibold" family="SF UI Text" pointSize="17"/>
                                <state key="normal" title="Show Recordings" backgroundImage="button">
                                    <color key="titleColor" red="0.1019607843" green="0.59607843140000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="goToRecordings:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6R0-ad-JMa"/>
                                </connections>
                            </button>
...
